# ROScar1

./: .gitattributes  .gitignore  CLAUDE.md
dock_design/: BUILD_GUIDE.md  HANDOFF.md
dock_design/docs/: nav2_dock_config.yaml
dock_design/scad/: charging_dock.scad  robot_contacts.scad
docs/firmware/: architecture.md  pinmap.md  wire-protocol.md
docs/mechanical/: chassis-design-guide.md
docs/plans/: 2026-03-11-aio-dashboard-design.md  2026-03-11-aio-dashboard-plan.md  2026-03-11-computer-vision-design.md  (+1 more)
firmware/: .gitignore  Makefile  README.md
roscar_ws/src/roscar_cv/: package.xml  setup.cfg  setup.py
roscar_ws/src/roscar_cv/config/: aruco_params.yaml  yolo_params.yaml
roscar_ws/src/roscar_cv/launch/: cv.launch.py  slam_remote.launch.py
roscar_ws/src/roscar_cv/roscar_cv/: aruco_detector_node.py  yolo_detector_node.py
roscar_ws/src/roscar_web/: package.xml  setup.cfg  setup.py
roscar_ws/src/roscar_web/config/: web_params.yaml
roscar_ws/src/roscar_web/launch/: web.launch.py
roscar_ws/src/roscar_web/roscar_web/: http_server_node.py  launch_manager_node.py
roscar_ws/src/roscar_web/web/: aio.html  index.html
roscar_ws/src/roscar_web/web/css/: aio.css  style.css
roscar_ws/src/roscar_web/web/js/: aio-app.js  aio-camera.js  aio-cv.js  aio-diagnostics.js  aio-graphs.js  aio-lidar-cam.js  aio-lidar.js  aio-map.js  aio-nav-tuning.js  aio-spacemouse.js  aio-status.js  aio-teleop.js  aio-tf.js  app.js  camera.js  lidar.js  map.js  modes.js  status.js  teleop.js
scripts/: install_ros2_wsl.sh  motor_test.py  roscar-cv.service  roscar-cv.sh  roscar-recovery-sudoers  roscar-recovery.py  roscar-recovery.service  roscar-web.service  roscar-web.sh  setup_rpi.sh
tasks/: audit-2026-04-28.md  chassis-v2-bracket-and-motor-analysis.md  chassis-v2-cut-sheet.md  chassis-v2-handoff.md  chassis-v2-iteration-notes.md  chassis-v2-rev30-notes.md  chassis-v2-rev42-notes.md  chassis-v2-sanity-checks.md  chassis-v2-session-2026-04-17.md  chassis-v2-tuning.md  lessons.md  postmortem-2026-05-01-nav-tf-stall.md  snapshot-2026-04-30.md  t2a-poc-2026-05-03.md  todo-uwb.md  todo.md
tools/: chassis_designer.py  measure_robot.py
(+103 files in other folders)
