<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roscar_cv</name>
  <version>0.1.0</version>
  <description>Computer vision nodes for ROScar1 (ArUco + YOLO). Runs on remote GPU PC.</description>
  <maintainer email="brian@example.com">Brian</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>image_transport</depend>

  <!-- T2a (2026-05-03): roscar_cv also hosts the optional remote slam_toolbox
       launch (slam_remote.launch.py). Pi opts in via use_remote_slam:=true on
       slam.launch.py. The slam_toolbox runtime + config are needed only on
       the WSL2 side; the dependency is harmless when this package is built
       on a system without it. -->
  <exec_depend>slam_toolbox</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
